Changelog
=========

1.6.5 (unreleased)


1.6.4 (2010-08-27)

- Fix regression introduced in 1.6.2 for salesforcepfgadapter subclasses
  that don't provide the creationMode field, only for real this time.
  [jbaldivieso]

1.6.3 (2010-08-15)

- Fix regression introduced in 1.6.2 for salesforcepfgadapter subclasses
  that don't provide the creationMode field.
  [davisagli]

1.6.2 (2010-08-03)

- Properly handle blank form fields in update mode by nullifying the
  corresponding Salesforce field.
  [yomatters]

1.6.1 (2010-03-26)

- Fix regressions in Plone 2.5.
  [davisagli]

- Fix regression in Plone 4 of timezone handling of datetimes when
  prepopulating fields.
  [davisagli]

- Add support for TALES expressions in the preset value map.
  [davisagli]

1.6.0 (2010-02-24)

- Fix a regression from hiding read-only fields from the UI -- createable
  fields still need to be an option even if they aren't updateable. This
  closes http://plone.org/products/salesforcepfgadapter/issues/17
  [davisagli]

- Code defensively so that the SFPFG adapter modified handler doesn't fail
  when encountering adapter subclasses that don't have a 'creationMode' field.
  [davisagli]

1.6b2 (2009-12-11)

- Don't show read-only fields as options in the field mapping UI. This closes
  issue #14.
  [davisagli]

- Remove obsolete actions from the type configuration. This closes issue #16.
  [davisagli]

- Allow mapping the filename and mimetype of file uploads to fields in SFDC
  (probably on an Attachment object) in addition to the data itself.
  [davisagli]

- Added ability to view and update values from existing Salesforce objects,
  found by matching an arbitrary expression.  See the README for details.
  [davisagli]

- Restored Plone 2.5 support and added compatibility with Plone 4.
  [davisagli]

- Added a 'Preset field values' setting so that hardcoded values can be mapped
  to Salesforce fields without having to create a hidden form field. Thanks to
  Jon Stahl for the suggestion.